--- a/PMSapXep/PMSapXep/PMSapXep.csproj
+++ b/PMSapXep/PMSapXep/PMSapXep.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,6 +90,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\chuaxep.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\daxep.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\muiten1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\muiten2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sosanh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
