--- a/PMSapXep/PMSapXep/PMSapXep.csproj
+++ b/PMSapXep/PMSapXep/PMSapXep.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\down-icon.png" />
+    <None Include="Resources\Red_Up_Arrow.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
